package modele.autres;

public enum TypePub {

}
