package modele.client;

import modele.bien.Orientation;

public class Recherche {
	private Orientation orient;
	private double surfaceTotal;
	private double longueurFacade;
	private double surfaceHabitable;
	private int nbEtage;
	private String moyenChauff;
	private int nbPiece;
	private int etage;
	private double chargeMensuelles;
}
